service-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postclient
  labels:
    app: postclient
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postclient
  template:
    metadata:
      labels:
        app: postclient
    spec:
      containers:
      - name: postclient
        image: docker.io/rayh001/postclient:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postclient
  name: postclient
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: http
  selector:
    app: postclient
  sessionAffinity: None
